Use microprofile 2.1